feat: support async function on `initialMessages`

--- a/examples/llamaindex-straming/package.json
+++ b/examples/llamaindex-straming/package.json
@@ -11,8 +11,11 @@
     "@radix-ui/react-slot": "^1.0.2",
     "ai": "^2.2.24",
     "class-variance-authority": "^0.7.0",
+    "foxact": "^0.2.26",
+    "idb-keyval": "^6.2.1",
     "jotai": "^2.5.1",
     "jotai-ai": "workspace:*",
+    "jotai-effect": "^0.2.3",
     "llamaindex": "0.0.35",
     "lucide-react": "^0.292.0",
     "next": "^14.0.3",
