--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   ],
   "scripts": {
     "build": "bunchee",
+    "dev": "bunchee --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -33,7 +34,8 @@
     "react": "^18.2.0",
     "typescript": "^5.2.2"
   },
-  "dependencies": {
-    "nanoid": "^5.0.3"
+  "peerDependencies": {
+    "ai": ">=2.2.24",
+    "jotai": ">=2.5.1"
   }
 }
