--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "src",
     "dist"
   ],
+  "packageManager": "pnpm@8.10.5",
   "scripts": {
     "build": "bunchee",
     "dev": "bunchee --watch",
