--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "src",
     "dist"
   ],
-  "packageManager": "pnpm@8.10.5",
+  "packageManager": "pnpm@8.13.1",
   "scripts": {
     "build": "bunchee",
     "dev": "bunchee --watch",
@@ -28,12 +28,12 @@
   "author": "himself65 <himself65@outlook.com>",
   "license": "MIT",
   "devDependencies": {
-    "@types/react": "^18.2.37",
-    "ai": "^2.2.25",
-    "bunchee": "^3.9.2",
-    "jotai": "^2.5.1",
-    "react": "^18.2.0",
-    "typescript": "^5.3.2"
+    "@types/react": "18.2.45",
+    "ai": "2.2.30",
+    "bunchee": "4.2.2",
+    "jotai": "2.6.0",
+    "react": "18.2.0",
+    "typescript": "5.3.3"
   },
   "peerDependencies": {
     "ai": ">=2.2.24",
