--- a/examples/llamaindex-straming/package.json
+++ b/examples/llamaindex-straming/package.json
@@ -2,7 +2,7 @@
   "name": "llamaindex-straming",
   "private": true,
   "scripts": {
-    "dev": "next dev --port 3001",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
