feat: use ai v3

--- a/package.json
+++ b/package.json
@@ -29,14 +29,16 @@
   "license": "MIT",
   "devDependencies": {
     "@types/react": "18.2.58",
-    "ai": "^3.3.20",
     "bunchee": "4.4.8",
     "jotai": "2.9.3",
     "react": "18.3.1",
     "typescript": "5.5.4"
   },
   "peerDependencies": {
-    "ai": ">=2.2.24 || >=3.3.20",
     "jotai": ">=2.5.1"
+  },
+  "dependencies": {
+    "@ai-sdk/provider-utils": "^1.0.17",
+    "@ai-sdk/ui-utils": "^0.0.39"
   }
 }
