--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,5 @@
     "verbatimModuleSyntax": true,
     "moduleResolution": "bundler"
   },
-  "exclude": [
-    "node_modules"
-  ]
+  "exclude": ["node_modules"]
 }
