--- a/package.json
+++ b/package.json
@@ -18,19 +18,23 @@
   "scripts": {
     "build": "bunchee",
     "dev": "bunchee --watch",
+    "lint": "prettier --c .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
     "ai",
     "openai",
-    "jotai"
+    "jotai",
+    "chatbot",
+    "ai-sdk"
   ],
   "author": "himself65 <himself65@outlook.com>",
   "license": "MIT",
   "devDependencies": {
-    "@types/react": "18.2.58",
+    "@types/react": "18.3.4",
     "bunchee": "4.4.8",
     "jotai": "2.9.3",
+    "prettier": "^3.3.3",
     "react": "18.3.1",
     "typescript": "5.5.4"
   },
