refactor: adapt to `vercel/ai` v3 (#12)

--- a/package.json
+++ b/package.json
@@ -14,29 +14,35 @@
     "src",
     "dist"
   ],
-  "packageManager": "pnpm@8.15.3",
+  "packageManager": "pnpm@9.9.0",
   "scripts": {
     "build": "bunchee",
     "dev": "bunchee --watch",
+    "lint": "prettier --c .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
     "ai",
     "openai",
-    "jotai"
+    "jotai",
+    "chatbot",
+    "ai-sdk"
   ],
   "author": "himself65 <himself65@outlook.com>",
   "license": "MIT",
   "devDependencies": {
-    "@types/react": "18.2.58",
-    "ai": "2.2.36",
+    "@types/react": "18.3.4",
     "bunchee": "4.4.8",
-    "jotai": "2.6.5",
-    "react": "18.2.0",
-    "typescript": "5.3.3"
+    "jotai": "2.9.3",
+    "prettier": "^3.3.3",
+    "react": "18.3.1",
+    "typescript": "5.5.4"
   },
   "peerDependencies": {
-    "ai": ">=2.2.24",
     "jotai": ">=2.5.1"
+  },
+  "dependencies": {
+    "@ai-sdk/provider-utils": "^1.0.17",
+    "@ai-sdk/ui-utils": "^0.0.39"
   }
 }
