--- a/examples/llamaindex-straming/package.json
+++ b/examples/llamaindex-straming/package.json
@@ -11,6 +11,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "ai": "^3.3.20",
     "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "foxact": "^0.2.37",
     "idb-keyval": "^6.2.1",
     "jotai": "^2.6.5",
