--- a/packages/jotai-ai/package.json
+++ b/packages/jotai-ai/package.json
@@ -8,6 +8,12 @@
       "types": "./dist/index.d.ts",
       "import": "./dist/index.js",
       "require": "./dist/index.cjs"
+    },
+    "./react": {
+      "types": "./dist/react/index.d.ts",
+      "import": "./dist/react/index.js",
+      "react-server": "./dist/react/index.server.js",
+      "require": "./dist/react/index.cjs"
     }
   },
   "files": [
