--- a/packages/jotai-ai/package.json
+++ b/packages/jotai-ai/package.json
@@ -41,6 +41,7 @@
     "ai": "^3.4.33",
     "bunchee": "4.4.8",
     "jotai": "2.9.3",
+    "jsdom": "^25.0.1",
     "prettier": "^3.3.3",
     "react": "18.3.1",
     "typescript": "5.5.4",
