--- a/packages/jotai-ai/package.json
+++ b/packages/jotai-ai/package.json
@@ -52,6 +52,7 @@
   },
   "dependencies": {
     "@ai-sdk/provider-utils": "^1.0.22",
-    "@ai-sdk/ui-utils": "^0.0.39"
+    "@ai-sdk/ui-utils": "^0.0.39",
+    "jotai-lazy": "^1.0.4"
   }
 }
