--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,8 +7,8 @@
     "module": "NodeNext",
     "skipLibCheck": true,
     "verbatimModuleSyntax": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
     "noUncheckedIndexedAccess": true,
     "jsx": "react-jsx",
     "baseUrl": ".",
