--- a/packages/jotai-ai/package.json
+++ b/packages/jotai-ai/package.json
@@ -37,6 +37,7 @@
   "license": "MIT",
   "devDependencies": {
     "@ai-sdk/provider": "^1.1.3",
+    "@ai-sdk/react": "^1.2.12",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.0.1",
@@ -48,6 +49,7 @@
     "jotai": "2.12.5",
     "jsdom": "^25.0.1",
     "react": "18.3.1",
+    "swr": "^2.3.4",
     "typescript": "5.8.3",
     "vitest": "^2.1.5"
   },
