--- a/examples/llamaindex-straming/package.json
+++ b/examples/llamaindex-straming/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build:deprecated": "next build",
     "start": "next start",
     "lint": "next lint"
   },
